--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="link rel=" preconnect href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link href="css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -21,7 +27,7 @@
             <ul>
                 <li><a href="#services">Meus Serviços</a></li>
                 <li><a href="#contact">Contato</a></li>
-                <li><a href="#portfólioTitle">Portfólio</a></li>
+                <li><a href="#portfolioTitle">Portfólio</a></li>
             </ul>
         </div>
         <div class="container">
@@ -30,7 +36,7 @@
                     é Eduardo
                 </h1>
                 <p>
-                    Sou um jovem apaixonado por técnologia<br>
+                    Sou um jovem apaixonado por tecnologia<br>
                     gostaria de apresentar um pouco do meu conhecimento<br>
                     atráves desse Portfólio
                 </p>
@@ -44,9 +50,15 @@
             <div id="headerClientText">
                 Alguns dos<br>meus Serviços
             </div>
-            <div class="headerlogo"><img src="Img/LogoJaime.png" width="70"></div>
-            <div class="headerlogo"><img src="Img/github.png" width="50"></div>
-            <div class="headerlogo"><img src="Img/linkedin.png" width="50"></div>
+            <a href="https://www.jaime.com.br/" target="_blank">
+                <div class="headerlogo"><img src="Img/LogoJaime.png" width="70"></div>
+            </a>
+            <a href="https://github.com/EduardoCarolinoSantos" target="_blank">
+                <div class="headerlogo"><img src="Img/github.png" width="50"></div>
+            </a>
+            <a href="https://www.linkedin.com/in/eduardo-carolino-santos-92819525b/" target="_blank">
+                <div class="headerlogo"><img src="Img/linkedin.png" width="50"></div>
+            </a>
         </div>
         <div class="container">
             <div id="services">
@@ -87,13 +99,13 @@
                 <p>Digite aqui seu endereço de e-mail. E eu entrarei em<br>
                     contato para fornecer um diagnóstico gratuito.
                 </p>
-                <form action="https://formspree.io/f/xwpkppba" method="post"><br>
+                <form action="https://formspree.io/f/xwpkppba" method="post" target="_blank"><br>
                     <input placeholder="Seu e-mail" type="text" name="contactEmail" required="required">
                     <button type="submit">Enviar</button>
                 </form>
             </div>
         </div>
-        <div class="container" id="portfólioTitle">
+        <div class="container" id="portfolioTitle">
             <div>
                 <h2 class="red">Conheça o meu</h2>
                 <h1 class="black">Portfólio</h1>
