--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Img/portfolio.png" type="image/x-icon">
 
 </head>
 
